<resources>
    <string name="app_name">Landlord Communication</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_button_text">LOGIN</string>
    <string name="register_button_text">SIGN UP</string>
    <string name="login_social_media_question">Don\'t want to register?</string>
    <string name="facebook_app_id">339125773506304</string>
    <string name="fb_login_protocol_scheme">fb339125773506304</string>
    <string name="continue_with_google_btn">Continue with Google</string>

    <string-array name="user_types">
        <item>Tenant</item>
        <item>Landlord</item>
    </string-array>

    <string name="user_picture">User picture</string>
    <string name="password_hint_repeat">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="search_by_name">Search by name</string>

    <string-array name="user_type_options">
        <item>Tenant</item>
        <item>Landlord</item>
    </string-array>

    <string-array name="filter_options">
        <item>All</item>
        <item>Only paid</item>
        <item>Only not paid</item>
        <item>Price ascending</item>
        <item>Price descending</item>
    </string-array>
    <string-array name="properties_layout_options">
        <item>Compact</item>
        <item>Detailed</item>
    </string-array>

    <string-array name="template_messages_formality_options">
        <item>Normal</item>
        <item>Formal</item>
    </string-array>

    <string name="rent">RENT</string>
    <string name="search">Search by address</string>

    <string name="message">MESSAGE</string>
    <string name="rate">RATE</string>
    <string name="or">OR</string>
    <string name="pay_rent">PAY RENT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="please_fill_in_your_credit_card_information">Please fill in your credit card information</string>
    <string name="valid_thru">Valid thru</string>
    <string name="month">MM</string>
    <string name="year">YY</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="pay">PAY</string>
    <string name="change_rent_amount">Change Rent Amount</string>
    <string name="money_hint">$</string>
    <string name="ok_change_rent_amount_confirmation">OK</string>

    <string name="preferences">Preferences</string>
    <string name="layout">Layout</string>
    <string name="write_a_message">Write a message</string>
    <string name="templates">Templates</string>
    <string name="template_formality_option_description">Select the formality level of template messages in chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
