<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.signup.secondform.SignUpSecondFormFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/prb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="cursive"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="35sp"
            android:textStyle="bold" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/sp_user_type_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sign_up"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="@dimen/small_margin"
            app:arrowTint="@color/colorAccent"
            app:textTint="@color/colorAccent" />

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/met_first_name_field"
            style="@style/MaterialEditTextStyle"
            android:layout_below="@+id/sp_user_type_option"
            app:mtf_image="@drawable/ic_mode_edit">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:textColor="@color/colorAccent" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/met_last_name_field"
            style="@style/MaterialEditTextStyle"
            android:layout_below="@+id/met_first_name_field"
            app:mtf_image="@drawable/ic_mode_edit">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:textColor="@color/colorAccent" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:src="@drawable/ic_check" />

    </RelativeLayout>


</FrameLayout>