<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.propertymanagement.PropertyManagementFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarFadeDuration="450"
        android:scrollbarSize="5dip"
        android:scrollbarThumbVertical="@color/colorAccent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/prb_loading_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/iv_property_image"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/iv_property_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv_property_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_property_image"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="4dp"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_property_rent_price"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_property_address"
                android:layout_marginTop="5dp"
                android:drawableBottom="@drawable/ic_money"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_property_rent_due_date"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_property_rent_price"
                android:drawableBottom="@drawable/ic_date"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_message"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_property_rent_due_date"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/message"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_rate"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_property_rent_due_date"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/rate"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_or_option_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_property_rent_due_date"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/or"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_user_individualisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_or_option_text"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_pay_rent"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_user_individualisation"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/pay_rent"
                android:visibility="gone" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>